--- a/Northwind.Application/Views/Categories/Delete.cshtml
+++ b/Northwind.Application/Views/Categories/Delete.cshtml
@@ -1,39 +1,51 @@
-﻿@model Northwind.Data.Entities.Category
+﻿@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
 
 @{
+    var count = Model.Count();
+    var guest = User.IsInRole("guest") ? "Guest" : "";
     ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete @(count > 1 ? "these" : "this")</h3>
 <div>
-    <h4>Category</h4>
+    <h4>@(count > 1 ? "Categories" : "Categorie")?</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Picture)
-        </dt>
-        <dd class = "col-sm-10">
-            <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" style="height:120px;width:120px;" />
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.CategoryName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Picture)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <form asp-action="DeleteConfirmed" method="post">
+                @foreach (var item in Model)
+                {
+                    <input asp-for="@item.CategoryId" name="ids" type="hidden" />
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(model => item.CategoryName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(model => item.Description)
+                        </td>
+                        <td>
+                            <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Picture!)" style="height:120px;width:120px;" />
+                        </td>
+                    </tr>                
+                }
+                <button class="btn btn-danger" type="submit">Delete</button>
+            </form>            
+        </tbody>
+        <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Categories")'">Back to List</button>
+    </table>
 </div>
