--- a/Northwind.Application/Views/Categories/Index.cshtml
+++ b/Northwind.Application/Views/Categories/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
-
 @{
     ViewData["Title"] = "Categories";
-    var createLink = User.IsInRole("guest") ? Url.ActionLink("Create", "GuestCategories") : Url.ActionLink("Create", "Categories");
+    var guest = User.IsInRole("guest") ? "Guest" : "";
 }
+
+<head>
+    <link href="@Url.Content("~/css/checkboxes.css")" rel="stylesheet" type="text/css" />
+</head>
 
 <h1>Categories</h1>
 
-<button class="btn btn-primary" onclick="location.href = '@createLink'">
+<button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Create", $"{guest}Categories")'">
     Create New
 </button>
 
@@ -23,32 +26,36 @@
             <th>
                 @Html.DisplayNameFor(model => model.Picture)
             </th>
-            <th></th>
+            <th class="text-center">
+                <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" />
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr onclick="location.href = '@Url.ActionLink("Details", User.IsInRole("guest") ? "GuestCategories" : "Categories", new { id = item.CategoryId })'" style="cursor:pointer">
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td class="align-middle">
-                <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Picture! ?? new byte[0])" style="height:60px;width:60px;" />
-            </td>
-            <td class="align-middle">
-                <ul style="list-style-type: none;">
-                    <li class="mb-1">
-                        <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a>
-                    </li>
-                    <li>
-                        <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
-                    </li>
-                </ul>
-            </td>
-        </tr>
-}
+    <form method="post" asp-action="Delete">
+        <button class="btn btn-danger float-end" type="submit" id="deleteButton" hidden>
+            Delete
+        </button>
+        @foreach (var item in Model)
+        {
+            <tr style="cursor:pointer">
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Categories", new { id = item.CategoryId })'">
+                     @Html.DisplayFor(modelItem => item.CategoryName)
+                </td>
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Categories", new { id = item.CategoryId })'">
+                     @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Categories", new { id = item.CategoryId })'">
+                    <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Picture! ?? new byte[0])" style="height:60px;width:60px;" />
+                </td>
+                <td class="align-middle text-center" style="min-width:50px;">
+                    <input name="ids" type="checkbox" id="@item.CategoryId" asp-for="@item.Delete" value="@item.CategoryId" onclick="onChangeHandler(this)" />
+                </td>
+            </tr>
+        }
+    </form>
+
     </tbody>
 </table>
+
+<script src="~/js/checkboxes.js" />
