--- a/Northwind.Application/Views/Employees/Delete.cshtml
+++ b/Northwind.Application/Views/Employees/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this</h3>
+<h3>Are you sure you want to delete @(count > 1 ? "these" : "this")</h3>
 <div>
     <h4>@(count > 1 ? "Employees" : "Employee")?</h4>
     <hr />
@@ -36,13 +36,13 @@
                     <input asp-for="@item.EmployeeId" name="ids" type="hidden" />
                     <tr>
                         <td class="align-middle">
-                                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                            @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
                         </td>
                         <td>
-                                @Html.DisplayFor(modelItem => item.Title)
+                            @Html.DisplayFor(modelItem => item.Title)
                         </td>
                         <td>
-                                @Html.DisplayFor(modelItem => item.HireDate)
+                            @Html.DisplayFor(modelItem => item.HireDate)
                         </td>
                         <td>
                             <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
@@ -50,8 +50,8 @@
                     </tr>
                 }
                 <button class="btn btn-danger" type="submit">Delete</button>
-                <a asp-action="Index" class="float-end">Back to List</a>
             </form>
+            <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Employees")'">Back to List</button>
         </tbody>
     </table>
 </div>
