--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -14,53 +14,52 @@
     Create New
 </button>
 
-
 <table class="table">
     <thead>
         <tr>
             <th>
                 Full Name
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.HireDate)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Photo)
             </th>
             <th class="text-center">
-                <input class="size" onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" />
+                <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" />
             </th>
         </tr>
     </thead>
     <tbody>
-        <form method="post" asp-action="Delete">
-            <button class="btn btn-danger float-end" type="submit" id="deleteButton" disabled="disabled">
-                Delete
-            </button>
-            @foreach (var item in Model)
-            {
-                <tr style="cursor:pointer">
-                    <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
-                            @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
-                            @Html.DisplayFor(modelItem => item.HireDate)
-                    </td>
-                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
-                        <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
-                    </td>
-                    <td class="align-middle text-center" style="min-width:50px;">
-                        <input name="ids" type="checkbox" id="@item.EmployeeId" asp-for="@item.Delete" value="@item.EmployeeId" onclick="onChangeHandler(this)" />
-                    </td>
-                </tr>
-            }
-        </form>
+    <form method="post" asp-action="Delete">
+        <button class="btn btn-danger float-end" type="submit" id="deleteButton" hidden>
+            Delete
+        </button>
+        @foreach (var item in Model)
+        {
+            <tr style="cursor:pointer">
+                <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                        @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                        @Html.DisplayFor(modelItem => item.HireDate)
+                </td>
+                <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                    <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
+                </td>
+                <td class="align-middle text-center" style="min-width:50px;">
+                    <input name="ids" type="checkbox" id="@item.EmployeeId" asp-for="@item.Delete" value="@item.EmployeeId" onclick="onChangeHandler(this)" />
+                </td>
+            </tr>
+        }
+    </form>
     </tbody>
 </table>
 
